--- a/src/Question/question.css
+++ b/src/Question/question.css
@@ -1,56 +1,35 @@
-.num {
-  margin-top: 12px;
-}
-.type {
-  padding-bottom: 12px;
-}
-.card {
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  transition: 0.3s;
-  width: auto;
-  height: auto;
-  text-align: left;
-  padding-left: 50px;
-  margin-bottom: 10px;
-  margin-top: 21px;
-}
-
-.card:hover {
-  box-shadow: 180px 180px 160px 0 rgba(0, 0, 0, 0.2);
-}
-
-.container {
-  padding: 2px 16px;
-}
 .answers {
   float: inline-end;
   padding: 12px;
-  background-color: rgb(63, 153, 73);
+  margin: 1%;
+  background-color: white;
+  border: "11px solid black";
+  border-radius: 10%;
 }
-.grid-container {
+.answers1 {
+  padding: 12px;
+  margin: 120px;
+  background-color: white;
+  border: "11px solid black";
+  border-radius: 10%;
+}
+.container {
   display: grid;
-  grid-template-columns: auto auto auto auto;
-  gap: 10px;
-  background-color: #2196f3;
-  padding: 10px;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 50px 50px;
 }
+.cont {
+  padding: 12px;
 
-.grid-container > div {
-  background-color: rgba(255, 255, 255, 0.8);
-  text-align: center;
-  padding: 20px 0;
+  border: "11px solid black";
+  border-radius: 10%;
+  background-color: white;
 }
-#progressbar {
+.cont2 {
+  padding: 12px;
+
+  border: "11px solid black";
+  border-radius: 10%;
   background-color: black;
-  border-radius: 13px;
-  /* (height of inner div) / 2 + padding */
-  padding: 3px;
-}
-
-#progressbar > div {
-  background-color: orange;
-  width: 40%;
-  /* Adjust with JavaScript */
-  height: 20px;
-  border-radius: 10px;
+  color: aliceblue;
 }
